refactor uri comaprison + more tests